# Generative-EEG-Augmentation

./: .gitignore  AGENTS.md  CLAUDE.MD  README.md  VALIDATION_REPORT.md  main.py  pyproject.toml
agent_docs/: PLANS.md
exploratory notebooks/: conditional_wasserstein_gan.ipynb  data_preprocessing_module.ipynb
scripts/: create_demo_dataset.py
src/gan module/gan rationale/: rationale.md
src/generative_eeg_augmentation/: __init__.py
src/generative_eeg_augmentation/eval/: __init__.py  eeg_metrics.py
src/generative_eeg_augmentation/models/: __init__.py  gan.py  vae.py
src/generative_eeg_augmentation/plots/: __init__.py
src/preprocessor module/: Preprocessing-legacy.py
tests/: test_data_loader.py  test_metrics.py  test_models.py
validation module/: VAE_FID_EVAL.ipynb
