[project]
name = "generative-eeg-augmentation"
version = "0.1.0"
description = "Generative models for EEG data augmentation using GANs and VAEs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mne>=1.11.0",
    "mypy>=1.19.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "ipykernel>=7.1.0",
]

app = [
    "streamlit>=1.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
